--- a/Doc-Historico/Doc-Historico.csproj
+++ b/Doc-Historico/Doc-Historico.csproj
@@ -33,6 +33,9 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -54,6 +57,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -63,6 +67,9 @@
 	  <None Remove="Models\" />
 	  <None Remove="Interfaces\" />
 	  <None Remove="Helpers\" />
+	  <None Remove="Resources\Images\search.svg" />
+	  <None Remove="Converters\" />
+	  <None Remove="Handlers\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Views\" />
@@ -71,5 +78,10 @@
 	  <Folder Include="Models\" />
 	  <Folder Include="Interfaces\" />
 	  <Folder Include="Helpers\" />
+	  <Folder Include="Converters\" />
+	  <Folder Include="Handlers\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <BundleResource Include="Resources\Images\search.svg" />
 	</ItemGroup>
 </Project>
